{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 81,
  "lineage": "2862e85b-8d26-0997-0a68-a705bd0c3a13",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292441378492:internet-gateway/igw-0fb727ea57cd659a8",
            "id": "igw-0fb727ea57cd659a8",
            "owner_id": "292441378492",
            "tags": {
              "Name": "maestro-igw"
            },
            "tags_all": {
              "Name": "maestro-igw"
            },
            "vpc_id": "vpc-0248a64d1e625b150"
          },
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292441378492:route-table/rtb-07dcbef59702a86b9",
            "id": "rtb-07dcbef59702a86b9",
            "owner_id": "292441378492",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fb727ea57cd659a8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "maestro-rtb"
            },
            "tags_all": {
              "Name": "maestro-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0248a64d1e625b150"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087e2b6dfdd2638aa",
            "route_table_id": "rtb-07dcbef59702a86b9",
            "subnet_id": "subnet-0ae0dbc1c59cd8ced"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0695116bbe88de4ee",
            "route_table_id": "rtb-07dcbef59702a86b9",
            "subnet_id": "subnet-0366020c4f3c7f1c0"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292441378492:security-group/sg-002d0682b971077e0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002d0682b971077e0",
            "ingress": [],
            "name": "terraform-20240521222528682700000001",
            "name_prefix": "terraform-",
            "owner_id": "292441378492",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "maestro-sg"
            },
            "tags_all": {
              "Name": "maestro-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0248a64d1e625b150"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292441378492:subnet/subnet-0ae0dbc1c59cd8ced",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae0dbc1c59cd8ced",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "292441378492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "maestro-subnet-1"
            },
            "tags_all": {
              "Name": "maestro-subnet-1"
            },
            "vpc_id": "vpc-0248a64d1e625b150"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292441378492:subnet/subnet-0366020c4f3c7f1c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0366020c4f3c7f1c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "292441378492",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "maestro-subnet-2"
            },
            "tags_all": {
              "Name": "maestro-subnet-2"
            },
            "vpc_id": "vpc-0248a64d1e625b150"
          },
          "dependencies": [
            "aws_vpc.new-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:292441378492:vpc/vpc-0248a64d1e625b150",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aff968561c3449d7",
            "default_route_table_id": "rtb-0dae18ead17414314",
            "default_security_group_id": "sg-0b7ab9f2b8be34c3a",
            "dhcp_options_id": "dopt-070db1ed5e886633a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0248a64d1e625b150",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dae18ead17414314",
            "owner_id": "292441378492",
            "tags": {
              "Name": "maestro-vpc"
            },
            "tags_all": {
              "Name": "maestro-vpc"
            }
          }
        }
      ]
    }
  ]
}